--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "homepage": "https://mindaugas-simaitis.github.io/learn-months-ts"
 }
